# qmqttiapp

./: CMakeLists.txt  LICENSE  README.md  mqtti.cpp  mqtti.h  qml.qrc
QMQTTI/Page_1/FigmaQmlInterface/: CMakeLists.txt  FigmaQmlInterface.hpp
QMQTTI/Page_1/FigmaQmlInterface/qml/: Button4_figma.qml  Button8_figma.qml  Publish2_figma.qml  Publish4_figma.qml  Publish_figma.qml  Qml_server_address_onClick2_figma.qml  Qml_server_address_onClick6_figma.qml  Subscribe1_figma.qml  Subscribe3_figma.qml  Subscribe5_figma.qml
qml/: Messages.qml  Subscriptions.qml  main.qml
src/: main.cpp
test/: CMakeLists.txt  qmottitest.cpp  qmottitest.hpp
